--- a/public/css/User/user.css
+++ b/public/css/User/user.css
@@ -53,27 +53,19 @@ span {
   font-family: "Niconne", cursive;
   font-size: 40px;
   color: #c446c9;
+  text-align: center;
 }
 
 .input-custom {
-  margin: 0;
-  padding: 0;
   border: none;
   background-color: rgba(156, 77, 156, 0.3);
   border-radius: 10px;
-  font-weight: bold;
-  font-size: small;
   font-family: "Montserrat", sans-serif;
   color: #aa38a4;
 }
 
-label {
-  font-weight: bold;
-  font-size: small;
-}
-
-.input-custom:focus {
-  outline: none;
+input:focus {
+  outline: none !important;
 }
 
 .fp {
@@ -89,20 +81,17 @@ label {
 
 button {
   padding: 10px 40px;
-  margin-top: 20px;
+  margin-top: 40px;
   border: none;
   background: linear-gradient(to right, #4568DC, #B06AB3);
   border-radius: 20px;
   transition: 0.3s;
+  margin: auto;
+  width: 50%;
 }
 
 button:hover {
   transform: scale(1.2);
-}
-
-button a {
-  text-decoration: none;
-  color: white;
 }
 
 .container {
