--- a/public/css/User/user.css
+++ b/public/css/User/user.css
@@ -9,7 +9,8 @@ body {
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
-  background: url("https://images.wallpaperscraft.com/image/single/lake_forest_snow_130421_1280x720.jpg");
+  background: url("https://images.wallpaperscraft.com/image/single/lake_forest_snow_130421_1280x720.jpg") no-repeat;
+  background-size: cover;
 }
 
 .container {
@@ -30,7 +31,7 @@ body {
 }
 
 .image h1 {
-  margin-top: 50%;
+  margin-top: 30%;
   padding-left: 20px;
   padding-right: 20px;
   letter-spacing: 2px;
@@ -87,7 +88,7 @@ button {
   border-radius: 20px;
   transition: 0.3s;
   margin: auto;
-  width: 50%;
+  width: 50% !important;
 }
 
 button:hover {
