--- a/public/css/userLogin.css
+++ b/public/css/userLogin.css
@@ -1,24 +1,144 @@
-html, .container_fluid {
-    height: 100%;
+@keyframes move-background {
+    from {
+        -webkit-transform: translate3d(0px, 0px, 0px);
+    }
+
+    to {
+        -webkit-transform: translate3d(1000px, 0px, 0px);
+    }
 }
 
-body {
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 100%;
+.background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
-.container_fluid{
-    background: url(/images/background.png?832731116c4dbc20b85b45afc739ca65) no-repeat;
-    background-size: cover;
+.stars {
+    background: black url(/images/default/stars.png) repeat;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    z-index: 0;
+}
+
+.twinkling {
+    width: 10000px;
+    height: 100%;
+    background: transparent url("/images/default/twinkling.png") repeat;
+    background-size: 1000px 1000px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    animation: move-background 70s linear infinite;
+
+}
+
+.clouds {
+    width: 10000px;
+    height: 100%;
+    background: transparent url("/images/default/clouds_repeat.png") repeat;
+    background-size: 1000px 1000px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 3;
+    animation: move-background 150s linear infinite;
+}
+
+.background-container img {
+    height: 70vh;
+    width: 70vh;
+    position: absolute;
+    z-index: 3;
+    right: 20px;
+}
+
+.main {
+    z-index: 1000;
+}
+
+.container_fluid {
+    height: 90vh;
+}
+
+@media screen and (min-width:600px) {
+    .brand img {
+        width: 140px;
+        height: 120px;
+        position: relative;
+    }
+}
+
+@media screen and (min-width: 100px) {
+    .brand img {
+        width: 90px;
+        height: 70px;
+        position: relative;
+    }
+}
+
+.brand-title h3 {
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange;
+    /* The typwriter cursor */
+    white-space: nowrap;
+
+    /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation:
+        typing 3s steps(22), blink .5s step-end infinite alternate;
+    color: white;
+    z-index: 1000;
+    width: -moz-fit-content;
+    width: fit-content;
+    position: relative;
+    height: -moz-fit-content;
+    height: fit-content;
+    color: white;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink {
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: orange;
+    }
 }
 
 #form {
     background-color: white;
     padding: 10px;
     border-radius: 15px 15px 15px 15px / 15px 15px 15px 15px;
-    background: rgba(255,255,255,0.8);
+    background: rgba(15, 45, 83, 0.8);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    color: aliceblue;
 }
 
 input.form-control:focus {
