--- a/Modules/User/Resources/assets/css/app.css
+++ b/Modules/User/Resources/assets/css/app.css
@@ -126,6 +126,21 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    body {
+        background-color: #FFFFFF;
+        background-image: linear-gradient(180deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    }
+
+    .background-container {
+        display: none;
+    }
+
+    .brand-title h3{
+        color: steelblue !important;
+    }
+}
+
 .brand-title h3 {
     overflow: hidden;
     /* Ensures the content is not revealed until the animation */
