--- a/resources/css/common_vue.scss
+++ b/resources/css/common_vue.scss
@@ -11,3 +11,7 @@ $navbar-breakpoint: $tablet;
 @import "../../node_modules/bulma/sass/layout/hero.sass";
 @import "../../node_modules/bulma/sass/layout/section.sass";
 @import "../../node_modules/bulma/sass/grid/columns.sass";
+
+.ck-editor__editable {
+    height: 300px;
+}
