--- a/Modules/User/Resources/assets/css/app.css
+++ b/Modules/User/Resources/assets/css/app.css
@@ -112,16 +112,16 @@
 
 @media screen and (min-width:600px) {
     .brand img {
-        width: 140px;
-        height: 120px;
+        width: 90px;
+        height: 90px;
         position: relative;
     }
 }
 
-@media screen and (min-width: 100px) {
+@media screen and (min-width: 100px) and (max-width: 600px) {
     .brand img {
-        width: 90px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         position: relative;
     }
 }
@@ -224,4 +224,12 @@ h1 {
 a {
     text-decoration: none;
     font-weight: bold;
+}
+
+.brand-image {
+    background-color: #19B3E6;
+    padding: 5px;
+    border-radius: 90%;
+    margin-left: 10px;
+    margin-top: 10px;
 }
