doing setup user account, need to be make db for school

--- a/Modules/User/Resources/assets/css/accountSetting.css
+++ b/Modules/User/Resources/assets/css/accountSetting.css
@@ -102,3 +102,21 @@ a.is-1-desktop {
     display: flex;
     align-items: center;
 }
+
+.image-choosing {
+    cursor: pointer;
+    position: relative;
+}
+
+.image-tick {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: -1rem;
+    right: -1rem;
+    display: none;
+}
+
+.image-choosed .image-tick {
+    display: block !important;
+}
